1.6.1
-Fixed parser: parseJpg and parseWebp problem
-Added text.toUTF32Length
-Added text.isUInteger
-Added text.isEmailAddress, isHKID
-Added text.charIsAlphaNumeric, text.charIsDigit, text.charIsUpperCase, text.charIsLowerCase

1.6.0
-Added data.ByteReader.readInt24/readUInt24
-Added data.ByteReader.readUTF16
-Added data.ByteReader.isASCIIText
-Added data.ByteReader.getU8Arr
-Added data.ParsedObject
-Added data.rol32, ror32, shl32, shr32, sar32
-Added data.arrayBufferEquals
-Change data.Duration, data.Timestamp, data.TimeInstant to bigint
-Added cert.js
-Added certutil.js
-Added hash.SHA1
-Added net.getIPv4Name
-Added text.splitLines
-Added unit.Count.wellFormat, unit.Count.wellFormatBin
-Added web.getCacheSize

1.5.5
-Fixed web.Dialog in iframe
-Fixed GeolocationFilter when using minDistMeter
-Added data.ByteReader
-Added media.StaticImage
-Added media.EXIFData
-Added media.loadImageFromBlob
-Added text.u8Arr2Hex
-Added web.propertiesToHTML
-Support parsing JPG file
-Support parsing WEBP file
-web.openData Support Blob

1.5.4
-Added geometry.Vector2D.getBounds
-Added kml.Feature.getBounds
-Added leaflet.toLatLngBounds
-Added math.RectArea.unionInPlace
-Added math.RectArea.unionPointInPlace

1.5.3
-Fixed parser file type handling

1.5.2
-Support leaflet icon without adding to map
-Added web.mimeFromExt
-Added cesium.createFromKMLFeature
-Added web.getImageInfo
-Enhance KML parsing
-Added olayer2.createFromKMLFeature
-Added olayer2.createFromGeometry
-Added olayer2.toPointArray
-Added geometry.GeometryCollection
-geometry.MultiPolygon support dynamic adding
-kml.PolyStyle support outline
-cesium support Polygon/MultiPolygon
-Added text.toHex8, toHex16, toHex32
-Added text.getEncList
-Added text.TextBinEnc
-Added text.UTF8TextBinEnc
-Added text.UTF8LCaseTextBinEnc
-Added text.UTF8UCaseTextBinEnc
-Added text.HexTextBinEnc
-Added text.Base64Enc
-Added text.UTF16LETextBinEnc
-Added text.UTF16BETextBinEnc
-Added text.CPPByteArrBinEnc
-Added text.CPPTextBinEnc